container/kubernetes/manifests/Sample-Pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
spec:
  containers:
  - name: web1
    image: nginx
    ports:
    - containerPort: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: pod2
spec:
  containers:
  - name: web2
    image: nginx
    ports:
    - containerPort: 80
