container/kubernetes/manifests/Sample-Service-ClusterIP-Multiport.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
  - name: https
    port: 43
    protocol: TCP
